--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ukrán–orosz háború – DeepState timeline + FIRMS + GIBS</title>
+  <title>Ukrán–orosz háború – DeepState + FIRMS + GIBS + Kivonat + Drón</title>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.css" />
   <script src="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.js"></script>
@@ -30,7 +30,7 @@
       box-shadow: var(--shadow);
       font: var(--font);
       overflow: hidden;
-      max-width: 520px;
+      max-width: 560px;
     }
 
     .panel .head{
@@ -126,6 +126,29 @@
     }
     .hidden{ display:none; }
 
+    /* Summary box */
+    .summary{
+      margin-top: 10px;
+      background: #f7f7ff;
+      border: 1px solid rgba(0,0,0,0.06);
+      border-radius: 10px;
+      padding: 10px;
+      font-size: 12px;
+    }
+    .summary b{ display:block; margin-bottom: 6px; }
+    .summary .grid{
+      display:grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 6px 10px;
+    }
+    .kpi{ display:flex; gap:6px; align-items:baseline; }
+    .kpi .label{ color:#444; }
+    .kpi .val{ font-weight:700; }
+    .summary .mini{
+      margin-top: 8px;
+      color:#555;
+    }
+
     /* Desktop positions */
     #panelLeft{ top: 12px; left: 12px; }
     #panelRight{ top: 12px; right: 12px; }
@@ -145,7 +168,7 @@
       box-shadow: var(--shadow);
       padding: 10px 12px;
       font: var(--font);
-      max-width: 620px;
+      max-width: 720px;
       overflow:hidden;
     }
     #legend .legendHead{
@@ -180,7 +203,7 @@
       #panelLeft{ top: 10px !important; }
       #panelRight{
         top: auto !important;
-        bottom: 104px !important; /* legend fölé */
+        bottom: 112px !important; /* legend fölé */
       }
       #legend{
         left: 10px !important;
@@ -188,7 +211,6 @@
         bottom: 10px !important;
         max-width: none !important;
       }
-      /* panel headers always visible */
       .panel .toggleBtn{ padding: 8px 12px; }
       .chip{ padding: 8px 10px; }
       .btn{ padding: 10px 12px; font-size: 13px; }
@@ -204,7 +226,7 @@
     <div class="head">
       <div>
         <h3>Rétegek & nézet</h3>
-        <div class="sub">Mobilon a panelek összecsukhatók.</div>
+        <div class="sub">Kivonat + drón pontok (OSINT).</div>
       </div>
       <button id="toggleLeft" class="toggleBtn" type="button">☰</button>
     </div>
@@ -213,6 +235,7 @@
         <label class="chip"><input id="chkDeep" type="checkbox" checked> DeepState</label>
         <label class="chip"><input id="chkFirms" type="checkbox" checked> FIRMS pötty</label>
         <label class="chip"><input id="chkGibs" type="checkbox"> NASA GIBS overlay</label>
+        <label class="chip"><input id="chkDrones" type="checkbox" checked> Drón pontok</label>
         <label class="chip"><input id="chkLog" type="checkbox" checked> Napló</label>
       </div>
 
@@ -271,6 +294,20 @@
         <button id="btnReloadFirms" class="btn secondary" type="button">FIRMS újratöltés</button>
       </div>
 
+      <div id="summary" class="summary">
+        <b>Napi/heti kivonat</b>
+        <div class="grid">
+          <div class="kpi"><span class="label">Napi Δ:</span> <span class="val" id="sumDay">–</span></div>
+          <div class="kpi"><span class="label">Heti Δ:</span> <span class="val" id="sumWeek">–</span></div>
+          <div class="kpi"><span class="label">Napi értelmezés:</span> <span class="val" id="sumDayTxt">–</span></div>
+          <div class="kpi"><span class="label">Heti értelmezés:</span> <span class="val" id="sumWeekTxt">–</span></div>
+        </div>
+        <div class="mini" id="sumWhere">Változás helye: –</div>
+        <div class="mini" style="margin-top:6px;">
+          Megjegyzés: “megszállt terület” nő → orosz területszerzés; csökken → ukrán visszafoglalás.
+        </div>
+      </div>
+
       <div id="log" class="log">Indul…</div>
     </div>
   </div>
@@ -315,22 +352,21 @@
       <button id="btnLegend" class="legendToggle" type="button">▼</button>
     </div>
     <div class="legendBody">
-      <div class="item"><span class="swatch" style="background:#6b0000;"></span>DeepState terület (kitöltés)</div>
+      <div class="item"><span class="swatch" style="background:#6b0000;"></span>DeepState megszállt terület (kitöltés)</div>
       <div class="item"><span class="swatch" style="background:#d00;"></span>DeepState határ/frontvonal</div>
       <div class="item"><span class="swatch" style="background:#ff5500;"></span>FIRMS hőpont</div>
-      <div class="item"><span class="swatch" style="background:rgba(255,255,255,0); border:1px dashed rgba(0,0,0,0.35);"></span>GIBS: hőtérkép overlay (választható)</div>
+      <div class="item"><span class="swatch" style="background:#0077ff;"></span>Drón pont (OSINT híralapú)</div>
+      <div class="item"><span class="swatch" style="background:rgba(255,255,255,0); border:1px dashed rgba(0,0,0,0.35);"></span>GIBS: hőtérkép overlay</div>
     </div>
   </div>
 
 <script>
 (() => {
-  // ====== 1) Beállítások ======
-  // FIRMS MAP_KEY: az idézőjelek MARADJANAK, csak a szöveget cseréld benne!
+  // ====== FIRMS MAP_KEY (idézőjelek maradnak!) ======
   const FIRMS_MAP_KEY = "44b266fd8324db5a0a9866017429dc43";
-  const UKRAINE_BBOX = "22,44,40,53"; // lon1,lat1,lon2,lat2
+  const UKRAINE_BBOX = "22,44,40,53";
   const UKRAINE_BOUNDS_RAW = { sw: [44.0, 22.0], ne: [52.7, 40.2] };
 
-  // ====== 2) UI elemek ======
   const el = (id) => document.getElementById(id);
 
   const panelLeft = el("panelLeft");
@@ -341,6 +377,7 @@
   const chkDeep = el("chkDeep");
   const chkFirms = el("chkFirms");
   const chkGibs = el("chkGibs");
+  const chkDrones = el("chkDrones");
   const chkLog = el("chkLog");
 
   const selBase = el("selBase");
@@ -366,6 +403,12 @@
   const legend = el("legend");
   const btnLegend = el("btnLegend");
 
+  const sumDay = el("sumDay");
+  const sumWeek = el("sumWeek");
+  const sumDayTxt = el("sumDayTxt");
+  const sumWeekTxt = el("sumWeekTxt");
+  const sumWhere = el("sumWhere");
+
   function log(msg){
     logEl.textContent += "\n" + msg;
     logEl.scrollTop = logEl.scrollHeight;
@@ -374,15 +417,14 @@
     logEl.classList.toggle("hidden", !on);
   }
 
-  // ====== 3) Mobil UX (panelek) ======
   function isMobile(){
     return window.matchMedia && window.matchMedia("(max-width: 820px)").matches;
   }
   function collapseForMobile(){
     if(isMobile()){
-      panelLeft.classList.add("collapsed");   // induljon összecsukva
-      panelRight.classList.add("collapsed");  // induljon összecsukva (de head látszik)
-      legend.classList.add("collapsed");      // legend is összecsukva
+      panelLeft.classList.add("collapsed");
+      panelRight.classList.add("collapsed");
+      legend.classList.add("collapsed");
       btnLegend.textContent = "▲";
     } else {
       panelLeft.classList.remove("collapsed");
@@ -402,7 +444,6 @@
     btnLegend.textContent = legend.classList.contains("collapsed") ? "▲" : "▼";
   });
 
-  // ====== 4) Leaflet térkép ======
   if(!window.L){
     alert("Leaflet nem töltött be.");
     return;
@@ -428,7 +469,6 @@
     else { map.removeLayer(esriSat); osm.addTo(map); }
   });
 
-  // Zoom click mode
   let clickZoomEnabled = false;
   selZoom.addEventListener("change", () => clickZoomEnabled = (selZoom.value === "click"));
   map.on("click", (e) => {
@@ -436,10 +476,11 @@
     map.setView(e.latlng, Math.max(map.getZoom(), 10), { animate:true });
   });
 
-  // ====== 5) Rétegek ======
   let deepLayer = null;
   let gibsLayer = null;
+
   const firmsLayer = L.layerGroup().addTo(map);
+  const dronesLayer = L.layerGroup().addTo(map);
 
   function setVisible(layer, on){
     if(!layer) return;
@@ -449,19 +490,18 @@
 
   chkDeep.addEventListener("change", () => setVisible(deepLayer, chkDeep.checked));
   chkFirms.addEventListener("change", () => setVisible(firmsLayer, chkFirms.checked));
+  chkDrones.addEventListener("change", () => setVisible(dronesLayer, chkDrones.checked));
   chkGibs.addEventListener("change", () => { if(currentDate) setGibs(currentDate); });
 
   chkLog.addEventListener("change", () => setLogVisible(chkLog.checked));
   setLogVisible(true);
 
-  // ====== 6) Helper fetch ======
   async function loadJson(url){
     const r = await fetch(url, { cache:"no-store" });
     if(!r.ok) throw new Error(`Fetch hiba: ${url} → HTTP ${r.status}`);
     return await r.json();
   }
 
-  // ====== 7) DeepState kirajzolás ======
   function renderDeepState(data){
     if(deepLayer) map.removeLayer(deepLayer);
     deepLayer = L.geoJSON(data, {
@@ -484,7 +524,6 @@
   }
   btnZoom.addEventListener("click", doZoom);
 
-  // ====== 8) GIBS overlay ======
   function gibsTemplateFor(sel){
     if(sel === "modis1k"){
       return "https://gibs.earthdata.nasa.gov/wmts/epsg3857/best/MODIS_Terra_Thermal_Anomalies_All/default/{date}/GoogleMapsCompatible_Level9/{z}/{y}/{x}.png";
@@ -511,7 +550,49 @@
   selGibs.addEventListener("change", () => { if(currentDate) setGibs(currentDate); });
   rngGibs.addEventListener("input", () => { if(gibsLayer) gibsLayer.setOpacity(Number(rngGibs.value||"0.55")); });
 
-  // ====== 9) FIRMS hőpontok ======
+  // ---------- Summary (daily/weekly + change centroid) ----------
+  function fmtDeltaKm2(d){
+    if(d === null || d === undefined || !Number.isFinite(d)) return "n/a";
+    const sign = d > 0 ? "+" : (d < 0 ? "−" : "±");
+    const val = Math.abs(d);
+    if(val >= 1000) return `${sign}${val.toFixed(0)} km²`;
+    if(val >= 100) return `${sign}${val.toFixed(1)} km²`;
+    return `${sign}${val.toFixed(2)} km²`;
+  }
+
+  async function loadSummary(){
+    try{
+      const daily = await loadJson("./data/summary_daily.json");
+      const weekly = await loadJson("./data/summary_weekly.json");
+      const change = await loadJson("./data/change_latest.json");
+
+      sumDay.textContent = fmtDeltaKm2(Number(daily.delta_km2));
+      sumWeek.textContent = fmtDeltaKm2(Number(weekly.delta_km2));
+      sumDayTxt.textContent = daily.interpretation || "–";
+      sumWeekTxt.textContent = weekly.interpretation || "–";
+
+      // show centroid (and allow user to fetch a place name on demand)
+      const gained = change.gained_centroid; // [lon,lat] where occupied grew
+      const lost = change.lost_centroid;     // [lon,lat] where occupied shrank
+
+      let line = `Változás helye: `;
+      if (Number(daily.delta_km2) > 0 && gained){
+        line += `(+): ${gained[1]}, ${gained[0]} `;
+        line += `<button class="btn secondary" style="padding:6px 9px; margin-left:6px;" onclick="lookupPlace(${gained[1]},${gained[0]},'whereOut')">Település</button>`;
+      } else if (Number(daily.delta_km2) < 0 && lost){
+        line += `(−): ${lost[1]}, ${lost[0]} `;
+        line += `<button class="btn secondary" style="padding:6px 9px; margin-left:6px;" onclick="lookupPlace(${lost[1]},${lost[0]},'whereOut')">Település</button>`;
+      } else {
+        line += "–";
+      }
+      sumWhere.innerHTML = line + ` <span id="whereOut" style="margin-left:6px; color:#555;"></span>`;
+      log("Kivonat: betöltve ✔");
+    }catch(e){
+      log("Kivonat: nincs még (futtasd az Action-t) – " + String(e));
+    }
+  }
+
+  // ---------- FIRMS ----------
   let firmsByDate = {};
 
   function parseCSV(csvText){
@@ -544,10 +625,11 @@
     return s.length===4 ? (s.slice(0,2)+":"+s.slice(2,4)) : s;
   }
 
-  window.lookupPlace = async function(lat, lon, elId){
-    const target = document.getElementById(elId);
+  window.lookupPlace = async function(lat, lon, outId){
+    const target = document.getElementById(outId);
     if(!target) return;
     target.textContent = "Település: betöltés…";
+    // Nominatim policy: cache + 1req/sec etc. :contentReference[oaicite:3]{index=3}
     const url = `https://nominatim.openstreetmap.org/reverse?format=jsonv2&lat=${encodeURIComponent(lat)}&lon=${encodeURIComponent(lon)}&zoom=12&addressdetails=1`;
     try{
       const r = await fetch(url, { cache:"no-store" });
@@ -567,7 +649,7 @@
     const keyOk = (FIRMS_MAP_KEY && FIRMS_MAP_KEY !== "IDE_IRST_BEA_FIRMS_MAP_KEYT" && FIRMS_MAP_KEY.length >= 10);
     if(!keyOk){
       keyInfo.textContent = "FIRMS kulcs: NINCS";
-      log("FIRMS: nincs MAP_KEY beállítva (a kódban).");
+      log("FIRMS: nincs MAP_KEY beállítva.");
       return;
     }
     keyInfo.textContent = "FIRMS kulcs: OK (" + FIRMS_MAP_KEY.slice(0,4) + "…)";
@@ -612,17 +694,12 @@
       const frp = Number(p.frp);
       const radius = Number.isFinite(frp) ? Math.max(3, Math.min(9, 2 + frp/20)) : 4;
 
-      const placeId = `place_${dateStr.replaceAll("-","")}_${i}_${Math.floor(Math.random()*1e6)}`;
-
       const popup =
         `<b>FIRMS hőpont</b><br>` +
         `Dátum: ${p.acq_date}<br>` +
         `Idő (UTC): ${fmtTime(p.acq_time)}<br>` +
         `Lat/Lon: ${p.lat.toFixed(5)}, ${p.lon.toFixed(5)}<br>` +
-        `FRP: ${p.frp||"-"} | Conf: ${p.conf||"-"} | Sat: ${p.sat||"-"}<br>` +
-        `<div id="${placeId}" style="margin-top:6px;">Település: –</div>` +
-        `<button style="margin-top:6px;border:0;border-radius:10px;padding:7px 10px;background:#111;color:#fff;cursor:pointer;font-size:12px;" ` +
-        `onclick="lookupPlace(${p.lat},${p.lon},'${placeId}')">Település betöltése</button>`;
+        `FRP: ${p.frp||"-"} | Conf: ${p.conf||"-"} | Sat: ${p.sat||"-"}`;
 
       firmsLayer.addLayer(
         L.circleMarker([p.lat, p.lon], {
@@ -637,7 +714,34 @@
   selDays.addEventListener("change", fetchFirms);
   selMaxPts.addEventListener("change", () => { if(currentDate) renderFirmsForDate(currentDate); });
 
-  // ====== 10) Timeline / lejátszás ======
+  // ---------- Drones layer ----------
+  async function loadDrones(){
+    dronesLayer.clearLayers();
+    try{
+      const gj = await loadJson("./data/drones_latest.geojson");
+      const feats = gj.features || [];
+      for(const f of feats){
+        if(!f.geometry || f.geometry.type !== "Point") continue;
+        const [lon, lat] = f.geometry.coordinates || [];
+        if(typeof lon !== "number" || typeof lat !== "number") continue;
+        const p = f.properties || {};
+        const title = p.title || "Drone-related (OSINT)";
+        const url = p.url ? `<br><a href="${p.url}" target="_blank" rel="noopener">Forrás</a>` : "";
+        dronesLayer.addLayer(
+          L.circleMarker([lat, lon], { radius: 5, color:"#0077ff", weight:2, fillOpacity:0.55 })
+            .bindPopup(`<b>Drón pont</b><br>${title}${url}<br><span style="color:#555">Lat/Lon: ${lat.toFixed(5)}, ${lon.toFixed(5)}</span>`)
+        );
+      }
+      log(`Drón pontok: betöltve ✔ (${feats.length})`);
+      setVisible(dronesLayer, chkDrones.checked);
+    } catch(e){
+      log("Drón pontok: nincs még (futtasd az Action-t) – " + String(e));
+    }
+  }
+
+  chkDrones.addEventListener("change", () => setVisible(dronesLayer, chkDrones.checked));
+
+  // ---------- Timeline ----------
   let dates = [];
   let currentDate = null;
   let playing = false;
@@ -692,7 +796,6 @@
     if(doZoomNow) doZoom();
   }
 
-  // ====== 11) Init ======
   async function init(){
     log("Indul…");
     try{
@@ -706,8 +809,9 @@
 
       await loadByIndex(dates.length - 1, true);
 
-      // FIRMS betöltés
       await fetchFirms();
+      await loadSummary();
+      await loadDrones();
 
       btnPlay.disabled = false;
       log("Kész ✔");
@@ -716,7 +820,6 @@
     }
   }
 
-  // Globális hibák naplózása
   window.addEventListener("error", (e) => log("JS ERROR: " + (e.message || e.error || e)));
   window.addEventListener("unhandledrejection", (e) => log("PROMISE ERROR: " + (e.reason || e)));
 
