--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ukrán–orosz háború – DeepState + FIRMS + GIBS + ArcGIS (Front + Advance) + Kivonat + Drón</title>
+  <title>Ukrán–orosz háború – DeepState + FIRMS + GIBS + ArcGIS + Kivonat + Drón</title>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.css" />
   <script src="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.js"></script>
@@ -30,7 +30,7 @@
       box-shadow: var(--shadow);
       font: var(--font);
       overflow: hidden;
-      max-width: 620px;
+      max-width: 640px;
     }
 
     .panel .head{
@@ -94,6 +94,7 @@
       font-size: 12px;
     }
     .btn.secondary{ background:#444; }
+    .btn.ghost{ background:#fff; color:#111; border:1px solid rgba(0,0,0,0.15); }
     .btn:disabled{ opacity:0.5; cursor:not-allowed; }
 
     select, input[type="text"]{
@@ -121,7 +122,7 @@
       background:#f6f6f6;
       border-radius: 10px;
       padding: 8px;
-      max-height: 150px;
+      max-height: 170px;
       overflow:auto;
     }
     .hidden{ display:none; }
@@ -143,10 +144,6 @@
     .kpi{ display:flex; gap:6px; align-items:baseline; }
     .kpi .label{ color:#444; }
     .kpi .val{ font-weight:700; }
-    .summary .mini{
-      margin-top: 8px;
-      color:#555;
-    }
 
     #panelLeft{ top: 12px; left: 12px; }
     #panelRight{ top: 12px; right: 12px; }
@@ -164,7 +161,7 @@
       box-shadow: var(--shadow);
       padding: 10px 12px;
       font: var(--font);
-      max-width: 820px;
+      max-width: 860px;
       overflow:hidden;
     }
     #legend .legendHead{
@@ -188,6 +185,20 @@
     .swatch{ width:12px; height:12px; border-radius:3px; border:1px solid rgba(0,0,0,0.2); }
     #legend.collapsed .legendBody{ display:none; }
 
+    .mapStamp{
+      position:absolute;
+      z-index:1200;
+      right:12px;
+      bottom:12px;
+      background: rgba(255,255,255,0.92);
+      border: 1px solid rgba(0,0,0,0.08);
+      border-radius: 10px;
+      padding: 8px 10px;
+      font: 12px/1.3 system-ui, -apple-system, Segoe UI, Roboto, Arial;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.12);
+      max-width: 300px;
+    }
+
     @media (max-width: 820px){
       #panelLeft, #panelRight{
         left: 10px !important;
@@ -197,12 +208,18 @@
       #panelLeft{ top: 10px !important; }
       #panelRight{
         top: auto !important;
-        bottom: 112px !important;
+        bottom: 130px !important;
       }
       #legend{
         left: 10px !important;
         right: 10px !important;
         bottom: 10px !important;
+        max-width: none !important;
+      }
+      .mapStamp{
+        left: 10px !important;
+        right: 10px !important;
+        bottom: 86px !important;
         max-width: none !important;
       }
       .panel .toggleBtn{ padding: 8px 12px; }
@@ -214,13 +231,14 @@
 
 <body>
   <div id="map"></div>
+  <div id="mapStamp" class="mapStamp">Adatok: betöltés…</div>
 
   <!-- LEFT PANEL -->
   <div id="panelLeft" class="panel">
     <div class="head">
       <div>
         <h3>Rétegek & nézet</h3>
-        <div class="sub">DeepState + FIRMS + GIBS + ArcGIS (front/advance) + drón + kivonat.</div>
+        <div class="sub">DeepState + FIRMS + GIBS + ArcGIS + drón + kivonat.</div>
       </div>
       <button id="toggleLeft" class="toggleBtn" type="button">☰</button>
     </div>
@@ -230,10 +248,8 @@
         <label class="chip"><input id="chkFirms" type="checkbox" checked> FIRMS pötty</label>
         <label class="chip"><input id="chkGibs" type="checkbox"> NASA GIBS overlay</label>
         <label class="chip"><input id="chkDrones" type="checkbox" checked> Drón pontok</label>
-
         <label class="chip"><input id="chkArcFront" type="checkbox" checked> ArcGIS frontvonal</label>
         <label class="chip"><input id="chkArcAdv" type="checkbox" checked> ArcGIS orosz advance</label>
-
         <label class="chip"><input id="chkLog" type="checkbox" checked> Napló</label>
       </div>
 
@@ -291,6 +307,7 @@
         <span class="chip" id="keyInfo">FIRMS kulcs: …</span>
         <button id="btnReloadFirms" class="btn secondary" type="button">FIRMS újratöltés</button>
         <button id="btnReloadArc" class="btn secondary" type="button">ArcGIS újratöltés</button>
+        <button id="btnRefreshAll" class="btn" type="button">🔄 Adat frissítés</button>
       </div>
 
       <div id="summary" class="summary">
@@ -316,7 +333,7 @@
     <div class="head">
       <div>
         <h3>Idősáv</h3>
-        <div class="sub">Lejátszás + csúszka (timeline).</div>
+        <div class="sub">Lejátszás + csúszka + ugrópontok (B verzió).</div>
       </div>
       <button id="toggleRight" class="toggleBtn" type="button">☰</button>
     </div>
@@ -340,6 +357,14 @@
 
       <div class="sliderRow">
         <input id="rngDay" type="range" min="0" max="0" value="0" step="1" disabled />
+      </div>
+
+      <div class="row">
+        <span class="chip">Ugrás:
+          <select id="selJump"></select>
+        </span>
+        <button id="btnJump" class="btn secondary" type="button">Ugrás</button>
+        <button id="btnLatest" class="btn ghost" type="button">Legfrissebb</button>
       </div>
     </div>
   </div>
@@ -366,14 +391,19 @@
   // ====== FIRMS MAP_KEY (idézőjelek maradnak!) ======
   const FIRMS_MAP_KEY = "44b266fd8324db5a0a9866017429dc43";
 
-  // ====== ArcGIS rétegek (a 2 URL, amit “ki akartál szedni”) ======
-  // 1) Frontvonal
+  // ====== ArcGIS rétegek ======
   const ARCGIS_FRONT_GEOJSON_URL =
     "https://services-eu1.arcgis.com/fppoCYaq7HfVFbIV/ArcGIS/rest/services/UKR_Frontline_27072025/FeatureServer/0/query?where=1%3D1&outFields=*&f=geojson";
-
-  // 2) Orosz advance (november / layer 31)
   const ARCGIS_ADVANCE_GEOJSON_URL =
     "https://services5.arcgis.com/SaBe5HMtmnbqSWlu/arcgis/rest/services/Russian_Advance_November/FeatureServer/31/query?where=1%3D1&outFields=*&f=geojson";
+
+  const ARCGIS_FRONT_LAYER_META =
+    "https://services-eu1.arcgis.com/fppoCYaq7HfVFbIV/ArcGIS/rest/services/UKR_Frontline_27072025/FeatureServer/0?f=pjson";
+  const ARCGIS_ADV_LAYER_META =
+    "https://services5.arcgis.com/SaBe5HMtmnbqSWlu/arcgis/rest/services/Russian_Advance_November/FeatureServer/31?f=pjson";
+
+  const ARCGIS_FRONT_LABEL_FALLBACK = "UKR_Frontline_27072025";
+  const ARCGIS_ADV_LABEL_FALLBACK = "Russian_Advance_November (L31)";
 
   const UKRAINE_BBOX = "22,44,40,53";
   const UKRAINE_BOUNDS_RAW = { sw: [44.0, 22.0], ne: [52.7, 40.2] };
@@ -402,17 +432,23 @@
   const keyInfo = el("keyInfo");
   const btnReloadFirms = el("btnReloadFirms");
   const btnReloadArc = el("btnReloadArc");
+  const btnRefreshAll = el("btnRefreshAll");
 
   const selGibs = el("selGibs");
   const rngGibs = el("rngGibs");
 
   const logEl = el("log");
+  const mapStamp = el("mapStamp");
 
   const lblDate = el("lblDate");
   const lblFile = el("lblFile");
   const selSpeed = el("selSpeed");
   const btnPlay = el("btnPlay");
   const rngDay = el("rngDay");
+
+  const selJump = el("selJump");
+  const btnJump = el("btnJump");
+  const btnLatest = el("btnLatest");
 
   const legend = el("legend");
   const btnLegend = el("btnLegend");
@@ -458,6 +494,9 @@
     btnLegend.textContent = legend.classList.contains("collapsed") ? "▲" : "▼";
   });
 
+  chkLog.addEventListener("change", () => setLogVisible(chkLog.checked));
+  setLogVisible(true);
+
   if(!window.L){
     alert("Leaflet nem töltött be.");
     return;
@@ -496,7 +535,6 @@
   const firmsLayer = L.layerGroup().addTo(map);
   const dronesLayer = L.layerGroup().addTo(map);
 
-  // ArcGIS layers (Leaflet GeoJSON)
   let arcFrontLayer = null;
   let arcAdvLayer = null;
 
@@ -510,12 +548,8 @@
   chkFirms.addEventListener("change", () => setVisible(firmsLayer, chkFirms.checked));
   chkDrones.addEventListener("change", () => setVisible(dronesLayer, chkDrones.checked));
   chkGibs.addEventListener("change", () => { if(currentDate) setGibs(currentDate); });
-
   chkArcFront.addEventListener("change", () => setVisible(arcFrontLayer, chkArcFront.checked));
   chkArcAdv.addEventListener("change", () => setVisible(arcAdvLayer, chkArcAdv.checked));
-
-  chkLog.addEventListener("change", () => setLogVisible(chkLog.checked));
-  setLogVisible(true);
 
   async function loadJson(url){
     const r = await fetch(url, { cache:"no-store" });
@@ -537,7 +571,6 @@
   function doZoom(){
     const mode = selZoom.value;
     if(mode === "front"){
-      // prefer ArcGIS front if available, else DeepState bounds
       if(arcFrontLayer){
         const b = arcFrontLayer.getBounds?.();
         if(b && b.isValid && b.isValid()) { map.fitBounds(b.pad(0.12)); return; }
@@ -579,7 +612,40 @@
   selGibs.addEventListener("change", () => { if(currentDate) setGibs(currentDate); });
   rngGibs.addEventListener("input", () => { if(gibsLayer) gibsLayer.setOpacity(Number(rngGibs.value||"0.55")); });
 
-  // ---------- Summary (daily/weekly + change centroid) ----------
+  // ---------- Map stamp (DeepState + ArcGIS meta) ----------
+  let arcFrontInfo = { label: ARCGIS_FRONT_LABEL_FALLBACK, edited: null };
+  let arcAdvInfo = { label: ARCGIS_ADV_LABEL_FALLBACK, edited: null };
+
+  function fmtDateTime(ts){
+    if(!ts || !Number.isFinite(ts)) return null;
+    const d = new Date(ts);
+    return d.toISOString().slice(0,16).replace("T"," ");
+  }
+
+  function updateStamp(){
+    const deep = currentDate || "–";
+    const front = arcFrontInfo.edited ? `${arcFrontInfo.label} (edit: ${fmtDateTime(arcFrontInfo.edited)} UTC)` : arcFrontInfo.label;
+    const adv = arcAdvInfo.edited ? `${arcAdvInfo.label} (edit: ${fmtDateTime(arcAdvInfo.edited)} UTC)` : arcAdvInfo.label;
+    mapStamp.innerHTML = `<b>Adat dátuma</b><br>DeepState: ${deep}<br>ArcGIS front: ${front}<br>ArcGIS advance: ${adv}`;
+  }
+
+  async function loadArcMeta(){
+    try{
+      const j1 = await loadJson(ARCGIS_FRONT_LAYER_META);
+      arcFrontInfo.label = j1?.name || ARCGIS_FRONT_LABEL_FALLBACK;
+      arcFrontInfo.edited = j1?.editingInfo?.lastEditDate || null;
+    }catch(e){ /* ignore */ }
+
+    try{
+      const j2 = await loadJson(ARCGIS_ADV_LAYER_META);
+      arcAdvInfo.label = j2?.name || ARCGIS_ADV_LABEL_FALLBACK;
+      arcAdvInfo.edited = j2?.editingInfo?.lastEditDate || null;
+    }catch(e){ /* ignore */ }
+
+    updateStamp();
+  }
+
+  // ---------- Summary ----------
   function fmtDeltaKm2(d){
     if(d === null || d === undefined || !Number.isFinite(d)) return "n/a";
     const sign = d > 0 ? "+" : (d < 0 ? "−" : "±");
@@ -600,8 +666,8 @@
       sumDayTxt.textContent = daily.interpretation || "–";
       sumWeekTxt.textContent = weekly.interpretation || "–";
 
-      const gained = change.gained_centroid; // [lon,lat]
-      const lost = change.lost_centroid;     // [lon,lat]
+      const gained = change.gained_centroid;
+      const lost = change.lost_centroid;
 
       let line = `Változás helye: `;
       if (Number(daily.delta_km2) > 0 && gained){
@@ -740,7 +806,7 @@
   selDays.addEventListener("change", fetchFirms);
   selMaxPts.addEventListener("change", () => { if(currentDate) renderFirmsForDate(currentDate); });
 
-  // ---------- Drones layer ----------
+  // ---------- Drones ----------
   async function loadDrones(){
     dronesLayer.clearLayers();
     try{
@@ -765,9 +831,8 @@
     }
   }
 
-  // ---------- ArcGIS layers ----------
+  // ---------- ArcGIS ----------
   async function loadArcGIS(){
-    // Front line
     try{
       if(arcFrontLayer) { map.removeLayer(arcFrontLayer); arcFrontLayer = null; }
       const gjFront = await loadJson(ARCGIS_FRONT_GEOJSON_URL);
@@ -780,7 +845,6 @@
       log("ArcGIS front: HIBA – " + String(e));
     }
 
-    // Russian advance polygons
     try{
       if(arcAdvLayer) { map.removeLayer(arcAdvLayer); arcAdvLayer = null; }
       const gjAdv = await loadJson(ARCGIS_ADVANCE_GEOJSON_URL);
@@ -795,6 +859,8 @@
     } catch(e){
       log("ArcGIS advance: HIBA – " + String(e));
     }
+
+    await loadArcMeta();
   }
 
   btnReloadArc.addEventListener("click", loadArcGIS);
@@ -837,6 +903,54 @@
     loadByIndex(Number(rngDay.value), false);
   });
 
+  function fillJumpOptions(){
+    selJump.innerHTML = "";
+    if(!dates.length) return;
+
+    const last = dates.length - 1;
+    const picks = new Map();
+
+    // Fixed points: latest, -7, -30, first
+    picks.set("Legfrissebb", last);
+    picks.set("−7 nap", Math.max(0, last - 7));
+    picks.set("−30 nap", Math.max(0, last - 30));
+    picks.set("Első", 0);
+
+    // Month starts (approx): take first date per YYYY-MM
+    const seenMonth = new Set();
+    for(let i=0; i<dates.length; i++){
+      const d = dates[i].date || "";
+      const ym = d.slice(0,7);
+      if(ym.length === 7 && !seenMonth.has(ym)){
+        seenMonth.add(ym);
+        picks.set(ym + " (hó eleje)", i);
+      }
+    }
+
+    for(const [label, idx] of picks.entries()){
+      const opt = document.createElement("option");
+      opt.value = String(idx);
+      opt.textContent = label;
+      selJump.appendChild(opt);
+    }
+    selJump.value = String(last);
+  }
+
+  btnJump.addEventListener("click", () => {
+    stopPlay();
+    const idx = Number(selJump.value);
+    rngDay.value = String(idx);
+    loadByIndex(idx, true);
+  });
+
+  btnLatest.addEventListener("click", () => {
+    stopPlay();
+    const idx = Number(rngDay.max);
+    rngDay.value = String(idx);
+    loadByIndex(idx, true);
+    selJump.value = String(idx);
+  });
+
   async function loadByIndex(i, doZoomNow=true){
     const item = dates[i];
     if(!item) return;
@@ -851,8 +965,44 @@
     setGibs(item.date);
     renderFirmsForDate(item.date);
 
+    updateStamp();
+
     if(doZoomNow) doZoom();
   }
+
+  // ---------- Refresh all ----------
+  async function refreshAll(){
+    stopPlay();
+    log("🔄 Teljes frissítés…");
+    btnRefreshAll.disabled = true;
+    try{
+      // re-fetch deepstate index
+      const ds = await loadJson("./data/deepstate_dates.json");
+      if(!Array.isArray(ds) || ds.length === 0) throw new Error("Üres deepstate_dates.json");
+      dates = ds;
+
+      rngDay.min = "0";
+      rngDay.max = String(dates.length - 1);
+      rngDay.value = String(dates.length - 1);
+      rngDay.disabled = false;
+
+      fillJumpOptions();
+
+      await loadByIndex(dates.length - 1, true);
+      await fetchFirms();
+      await loadSummary();
+      await loadDrones();
+      await loadArcGIS();
+
+      btnPlay.disabled = false;
+      log("🔄 Frissítés kész ✔");
+    } catch(e){
+      log("🔄 Frissítés HIBA: " + String(e));
+    } finally {
+      btnRefreshAll.disabled = false;
+    }
+  }
+  btnRefreshAll.addEventListener("click", refreshAll);
 
   async function init(){
     log("Indul…");
@@ -864,6 +1014,9 @@
       rngDay.max = String(dates.length - 1);
       rngDay.value = String(dates.length - 1);
       rngDay.disabled = false;
+
+      fillJumpOptions();
+      await loadArcMeta();
 
       await loadByIndex(dates.length - 1, true);
 
